# ikigai

./: .env.example  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  index.html  mypy.ini  playground.py  pyproject.toml  pytest.ini  ruff.toml  zappa_init.py  zappa_settings.json  zappa_settings.template.json
.github/workflows/: dev.yaml  main.yaml  prod.yaml  workflow.yaml
app/: __init__.py  config.py  extensions.py  zappa_events.py
app/admin/: services.py  views.py
app/models/: activity.py  activity_fetch_job.py  athlete.py  settings.py  strava_token.py
app/rest/: __init__.py  activity.py  athlete.py  auth.py  memory.py  playground.py  settings.py  webhook.py
app/services/: activity.py  athlete.py  auth.py  client.py  cron.py  memory.py  settings.py  task.py  webhook.py
app/utils/: error.py  json_encoder.py
migrations/: env.py
migrations/versions/: 20230503_690fbacdda86_add_athlete_table.py  20230505_8adcf1b4cd8e_add_strava_scope.py  20230505_a13c71267756_add_strava_data.py  20230506_9701de544e8a_add_strava_token_table.py  20230520_87dc9c13a451_add_activity_table.py  20230611_840607e9ca93_longer_picture_url.py  20230611_d3a221cf91d7_fields_non_nullable.py  20230723_48abdbce9b1b_strava_last_updated.py  20230723_88dc05fcfc3a_store_activity_jobs.py  20230723_97bb8552fd4f_replace_done_bool_by_datetime.py  20231107_66559e7d3696_index_jobs_by_activity.py  20231108_2c86a0e2e460_add_created_activities_jobs_at.py  20231109_4116f225a0ba_add_do_after_column_to_jobs.py  20231109_b18e1a9a03de_add_last_active_field.py  20231112_85f901d43b12_longer_activity_name.py  20231113_744554627216_job_retry_count.py  20231113_8c548e32cfbd_add_canceled_timestamp.py  20231117_10d97bb9c086_add_current_activity_refreshed_at_column.py  (+5 more)
tests/: conftest.py
(+37 files in other folders)
