[project]
name = "ikigai"
version = "0.1.0"
description = "Ikigai backend"
authors = [
    { name = "Paul Nicolet" }
]

# boto3 frozen: https://stackoverflow.com/questions/75887656/botocore-package-in-lambda-python-3-9-runtime-return-error-cannot-import-name
dependencies = [
    "stravalib>=1.3.3",
    "flask>=2.3.2",
    "flask-cors>=4.0.0",
    "flask-sqlalchemy>=3.0.5",
    "sqlalchemy>=2.0.19",
    "flask-migrate>=4.0.4",
    "psycopg[binary,pool]>=3.1.10",
    "shortuuid>=1.0.11",
    "zappa>=0.57.0",
    "boto3==1.26.90",
    "sentry-sdk[flask]>=1.29.2",
    "pydantic<2",
    "spectree>=1.2.0",
    "flask-jwt-extended>=4.5.2",
    "geopy>=2.3.0",
    "sendblue>=0.1.2"
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.0.284",
    "black>=23.7.0",
    "pre-commit>=3.3.3",
    "mypy>=1.5.0",
    "types-flask-cors>=4.0.0.1",
    "types-flask-migrate>=4.0.0.6",
    "pytest>=7.4.0",
    "types-colorama>=0.4.15.12",
    "pytest-cov>=4.1.0",
    "responses>=0.23.3",
    "factory-boy>=3.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py310"
select = ["E", "F", "C90", "I", "N", "UP", "YTT", "BLE", "FBT", "B", "COM", "C4", "T10", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI"]
extend-exclude = ["tests/fixtures/resources/*.py"]
force-exclude = true

[tool.mypy]
[[tool.mypy.overrides]]
module = "stravalib.*,factory.*,geopy.geocoders.*,zappa.asynchronous.*,sendblue.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv"